--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "locobasic",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "# LocoBasic - Loco BASIC",
   "type": "commonjs",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist/src/* && rm dist/locobasic.js",
     "copyXXX": "cp src/*.html dist/ && mkdirp -p dist/src && cp -r src/*.ts dist/src",
-    "build": "tsc --build && npx rollup -c"
+    "build": "tsc --build && npx rollup -c",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
+    "gh-pages": "^6.2.0",
     "mkdirp": "^3.0.1",
     "rollup": "^4.25.0",
     "rollup-plugin-typescript2": "^0.36.0",
