rollup and ts config improved; build for ES2017; factorial example improved; allow to cancel input

--- a/src/UI/tsconfig.json
+++ b/src/UI/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "outDir": "../../dist/UI",
     "declarationDir": "../../dist/UI/types",
-    //"sourceRoot":"./src/UI",
       "lib": [
         "es2020",
         "dom"
       ],
+      "rootDir": "../",
       "composite": true,
   },
   "include": ["./*.ts"],
