--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,5 @@
 {
-  "compilerOptions": {
-      "module": "ESNext",
-      "target": "ES6",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "strict": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
-  },
-
+  "extends": "./src/tsconfig-base.json",
   "files": [],
   "include": [],
   "references": [
