--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "locobasic",
-  "version": "0.1.46",
+  "version": "0.1.47",
   "description": "# LocoBasic - Loco BASIC",
   "type": "commonjs",
   "scripts": {
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "clean": "rm -rf dist/src/* && rm dist/*.js && rm dist/*.js.map && rm dist/*.ts && rm dist/*.ts.map",
     "build": "tsc --build && npx rollup -c && node updateVersion.js",
     "predeploy": "npm run build",
