--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: 18
     - run: npm ci
     - run: npm run build --if-present
-    #- run: npm run test
+    - run: npm run test
     #- run: npm run testnode
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
