--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "locobasic",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "# LocoBasic - Loco BASIC",
   "type": "commonjs",
   "scripts": {
     "lint": "eslint src",
     "clean": "rm -rf dist/src/* && rm dist/*.js && rm dist/*.js.map && rm dist/*.ts && rm dist/*.ts.map",
     "build": "tsc --build && npx rollup -c && node updateVersion.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage --coverage.reportsDirectory=./tmp/coverage",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -15,13 +18,15 @@
     "@types/codemirror": "^5.60.15",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.9.0",
+    "@vitest/coverage-v8": "^3.1.3",
     "eslint": "^9.14.0",
     "gh-pages": "^6.2.0",
     "mkdirp": "^3.0.1",
     "rollup": "^4.25.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "vitest": "^3.1.3"
   },
   "dependencies": {
     "ohm-js": "^17.1.0"
