DRAW, MOVE, PLOT with graphicsPen parameter; functions in snippet: left$, mid$, right$; print and separate printTab

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "../dist/src/",
     "declarationDir": "../dist/src/types",
-    "types": ["node"],
-    //"sourceRoot":"./src"
+    "types": ["node"]
   },
   "include": ["./*.ts"],
 }
